2005-10-24  Jim Meyering  <jim@meyering.net>

	* mkdir-p.c (make_dir_parents): Like the code above, don't rely
	on mkdir failing with a particular errno value (EEXIST).
	Based on a patch by Dmitry V. Levin.

	* mkdir-p.c (make_dir_parents): Make the preceding fix a little
	more robust, e.g., when the final component is created as a non-
	directory by another process just before `mkdir -p's final mkdir.

	A command like `mkdir -p nonexistent/.' would create the
	directory but exit nonzero with a diagnostic.  This could also be
	triggered with a non-`.' component, e.g., in a race with another
	process running the same `mkdir -p nonexistent/sub' command.

	* mkdir-p.c (make_dir_parents): Handle the case of an
	existing final component.
	Reported by Matthias Andree here:
	http://savannah.gnu.org/bugs/?func=detailitem&item_id=14848

2005-10-23  Jim Meyering  <jim@meyering.net>

	* sha512.h: Remove no-longer-relevant comment.

2005-08-27  David Madore  <david.madore@ens.fr>

	* sha256.h, sha256.c, sha512.h, sha512.c: New files - sha-2
	implementation.

2005-10-20  Jim Meyering  <jim@meyering.net>

	* modechange.c (mode_compile): Reject an invalid mode string
	that starts with an octal digit.  From Andreas Gruenbacher.

2005-10-13  Paul Eggert  <eggert@cs.ucla.edu>

	* mkdir-p.c (make_dir_parents): Don't report an error if an
	intermediate directory is in a read-only file system.  Problem
	reported by Eric Blake.

2005-10-08  Jim Meyering  <jim@meyering.net>

	* openat.c (rpl_openat): Use the promoted type (int), not mode_t,
	as second argument to va_arg.  Otherwise, some versions of gcc
	warn that `if this code is reached, the program will abort'.

	Update from gnulib.
	* getdelim.c: (SIZE_MAX): New macro, if not already defined.

2005-10-05  Jim Meyering  <jim@meyering.net>

	* Makefile.am (libcoreutils_a_DEPENDENCIES): Remove definition.
	Once it's gone, automake generates an equivalent one.
	Suggestion from Stepan Kasal.

	* getaddrinfo.h: Merge from gnulib.
